--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>毛概PPT</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css">
+		<link rel="stylesheet" href="css/theme/league.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -24,8 +24,138 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section>
+					<h1 class="title">两山理论的实践与探讨</h1>
+					<p>毛概第XX组</p>
+				</section>
+				<section>
+					<section>
+						<h2>什么是两山理论?</h2>
+					</section>
+					<section>
+						<p class="left">
+两山理论，用一句话概扩就是“绿水青山就是金山银山”。它的核心理念，可以概括为这两句话：
+						</p>
+						<p class="fragment fade-up">
+							保护生态环境就是保护生产力、改善生态环境就是发展生产力。
+						</p>
+					</section>
+				</section>
+				<section>
+					<section>
+						<h2>左右江地区</h2>
+					</section>
+					<section>
+						<p class="left">
+　　地处云贵高原东南缘的左右江地区，是土地革命时期党领导的革命根据地，以百色地区为中心，包括左江流域和右江流域。百色经过多年的发展建设，如今已成为中国“西电东送”的基地和广西主要黄金产地之一，中国乃至亚洲重要的铝工业基地。右江河谷是全国著名的亚热带水果基地、南菜北运基地和“芒果之乡”。左江流域的崇左地区与越南接壤，有铁路、公路与越南相通，沿边近海连东盟，是通往东盟最便捷的陆路大通道。
+						</p>
+
+					</section>
+					<section>
+						<p class="left">
+　　左右江革命老区水接云贵，山连越南，拥有丰富的农业资源、矿产资源和旅游资源，如能把握“两山理论”，依托资源禀赋，大力发展低碳循环经济，定能让绿色发展持续释放出生态红利，进而培育出革命老区的新经济增长极。
+						</p>
+					</section>
+				</section>
+				<section>
+					<section>
+						<h2>做好特色新文章</h2>
+					</section>
+					<section>
+						<!-- <h3>做好特色新文章</h3> -->
+						<ol>
+							<li>
+								打造蓝色临港低碳极。
+							</li>
+							<li>
+								打造绿色农业及跨国旅游极。
+							</li>
+							<li>
+								打造黄色环保循环极。
+							</li>
+							<li>
+								打造红色传承极。
+							</li>
+						</ol>
+					</section>
+				</section>
+				<section>
+					<section>
+						<h2>盘活产业谋发展</h2>
+					</section>
+					<section>
+						<!-- <h3>做好特色新文章</h3> -->
+						<ul>
+							<li>
+								培育有机农业。以农业清洁生产、有机物综合利用为核心，构建有机生态农业体系。
+							</li>
+							<li>
+								培育环保工业。
+							</li>
+							<li>
+								壮大碳汇产业。
+							</li>
+							<li>
+								培育产业强镇。
+							</li>
+							<li>
+								倡导低碳消费。
+							</li>
+							<li>
+								打造美丽乡村。
+							</li>
+							<li>
+								广大人民群众热切期盼加快提高生态环境质量。
+							</li>
+						</ul>
+					</section>
+				</section>
+				<section>
+					<h2>让我们先来看几个例子</h2>
+				</section>
+				<section>
+					<section>
+						<h1>Sri Lanka</h1>
+					</section>
+					<section>
+						<h2>斯里兰卡</h2>
+						<h3>环境良好经济不行</h3>
+					</section>
+				</section>
+				<section>
+					<section>
+						<h1>太湖</h1>
+					</section>
+					<section>
+						<h2>太湖</h2>
+						<h3>经济环境的平衡</h3>
+					</section>
+				</section>
+				<section>
+					<section>
+						<h1>London</h1>
+					</section>
+					<section>
+						<h2>伦敦</h2>
+						<!-- <br><br> -->
+						<h3>环境制约经济现象的原因</h3>
+						<ul>
+							<li>不可逆伤害</li>
+							<li>没有及时转变</li>
+						</ul>
+					</section>
+				</section>
+				<section>
+					<section>
+						<h2>中国改革开放初期的具体情况</h2>
+					</section>
+				</section>
+				<section>
+					<section>
+						<h2>中国当今的现状</h2>
+					</section>
+				</section>
+
 			</div>
 		</div>
 
