--- a/index.html
+++ b/index.html
@@ -25,41 +25,63 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>
-					<h1 class="title">两山理论的实践与探讨</h1>
-					<p>毛概第XX组</p>
+					<h1 class="title">结合“两山理论”<br> <span class="subtitle">浅谈基于生态环境的粗放型经济发展方式</span></h1>
+					<br>
+					<p style="font-size: 0.9em;">毛概第六组 主题展示</p>
 				</section>
 				<section>
 					<section>
-						<h2>什么是两山理论?</h2>
+					<h2>因何而起?</h2>
 					</section>
 					<section>
+						<h3>背景</h3>
+						<p class="left">2017年10月18日，习近平同志在十九大报告中指出，坚持人与自然和谐共生。必须树立和践行绿水青山就是金山银山的理念，坚持节约资源和保护环境的基本国策，像对待生命一样对待生态环境，统筹山水林田湖草系统治理，实行最严格的生态环境保护制度，形成绿色发展方式和生活方式，坚定走生产发展、生活富裕、生态良好的文明发展道路，建设美丽中国，为人民创造良好生产生活环境，为全球生态安全作出贡献。
+					</section>
+					<section>
+						<h3>提出时间</h3>
 						<p class="left">
-两山理论，用一句话概扩就是“绿水青山就是金山银山”。它的核心理念，可以概括为这两句话：
+							2005年8月15日，时任浙江省委书记的习近平同志在浙江湖州安吉考察时，首次提出了“绿水青山就是金山银山”的科学论断，后来，他又进一步阐述了绿水青山与金山银山之间三个发展阶段的问题。（改革开放前期）</p>
 						</p>
-						<p class="fragment fade-up">
-							保护生态环境就是保护生产力、改善生态环境就是发展生产力。
-						</p>
+					</section>
+					<section>
+						<h2>改革开放前期的粗放型经济发展方式</h2>
 					</section>
 				</section>
 				<section>
+					<!-- <section>
+						
+					</section> -->
 					<section>
+						<h2 style="font-size: 1.4em;">主题展示构成</h2>
+						<ul style="font-size: 0.8em;">
+							<li>
+								结合左右江革命老区的发展案例，<br>简要介绍“两山理论”内容与绿色发展概念。
+							</li>
+							<li>
+								结合不丹、中国太湖、雾都伦敦的经济发展轨迹浅，<br>谈生态环境保护与粗放型经济发展方式的辩证关系。
+							</li>
+						</ul>
+					</section>
+				</section>
+				<section>
+					<section data-background="css/image/4.jpg">
 						<h2>左右江地区</h2>
 					</section>
-					<section>
+					<!-- <section>
 						<p class="left">
-　　地处云贵高原东南缘的左右江地区，是土地革命时期党领导的革命根据地，以百色地区为中心，包括左江流域和右江流域。百色经过多年的发展建设，如今已成为中国“西电东送”的基地和广西主要黄金产地之一，中国乃至亚洲重要的铝工业基地。右江河谷是全国著名的亚热带水果基地、南菜北运基地和“芒果之乡”。左江流域的崇左地区与越南接壤，有铁路、公路与越南相通，沿边近海连东盟，是通往东盟最便捷的陆路大通道。
+							　　地处云贵高原东南缘的左右江地区，是土地革命时期党领导的革命根据地，以百色地区为中心，包括左江流域和右江流域。百色经过多年的发展建设，如今已成为中国“西电东送”的基地和广西主要黄金产地之一，中国乃至亚洲重要的铝工业基地。右江河谷是全国著名的亚热带水果基地、南菜北运基地和“芒果之乡”。左江流域的崇左地区与越南接壤，有铁路、公路与越南相通，沿边近海连东盟，是通往东盟最便捷的陆路大通道。
 						</p>
-
-					</section>
-					<section>
-						<p class="left">
-　　左右江革命老区水接云贵，山连越南，拥有丰富的农业资源、矿产资源和旅游资源，如能把握“两山理论”，依托资源禀赋，大力发展低碳循环经济，定能让绿色发展持续释放出生态红利，进而培育出革命老区的新经济增长极。
-						</p>
+					</section> -->
+					<section data-background="css/image/5.jpg">
+						<!-- <p class="left">
+						左右江革命老区水接云贵，山连越南，拥有丰富的农业资源、矿产资源和旅游资源，如能把握“两山理论”，依托资源禀赋，大力发展低碳循环经济，定能让绿色发展持续释放出生态红利，进而培育出革命老区的新经济增长极。
+						</p> -->
 					</section>
 				</section>
+
 				<section>
 					<section>
-						<h2>做好特色新文章</h2>
+						<h2>利用绿水青山好禀赋</h2>
 					</section>
 					<section>
 						<!-- <h3>做好特色新文章</h3> -->
@@ -104,49 +126,65 @@
 							<li>
 								打造美丽乡村。
 							</li>
-							<li>
+							<!-- <li>
 								广大人民群众热切期盼加快提高生态环境质量。
-							</li>
+							</li> -->
 						</ul>
 					</section>
 				</section>
-				<section>
-					<h2>让我们先来看几个例子</h2>
-				</section>
+
 				<section>
 					<section>
-						<h1>Sri Lanka</h1>
+						<h2>什么是两山理论?</h2>
 					</section>
 					<section>
-						<h2>斯里兰卡</h2>
-						<h3>环境良好经济不行</h3>
+						<p class="left">
+							两山理论，用一句话概扩就是“绿水青山就是金山银山”。它的核心理念，可以概括为这两句话：
+						</p>
+						<p class="fragment fade-up">
+							保护生态环境就是保护生产力、改善生态环境就是发展生产力。
+						</p>
+					</section>
+				</section>
+
+
+				<section>
+					<h2>让我们接着看几个例子</h2>
+				</section>
+				<section>
+					<section data-background="css/image/6.png">
+						<h1>Bhutan</h1>
+					</section>
+					<section>
+						<h2>不丹</h2>
+						<h3>最幸福的地方，缘何最不发达</h3>
 					</section>
 				</section>
 				<section>
-					<section>
+					<section data-background="css/image/7.png">
 						<h1>太湖</h1>
 					</section>
 					<section>
 						<h2>太湖</h2>
-						<h3>经济环境的平衡</h3>
+						<h3>走在前列，勇立潮头</h3>
 					</section>
 				</section>
 				<section>
-					<section>
+					<section data-background="css/image/8.jpg">
 						<h1>London</h1>
 					</section>
 					<section>
 						<h2>伦敦</h2>
 						<!-- <br><br> -->
-						<h3>环境制约经济现象的原因</h3>
-						<ul>
+						<h3>雾都</h3>
+						<!-- <ul>
 							<li>不可逆伤害</li>
 							<li>没有及时转变</li>
-						</ul>
+						</ul> -->
 					</section>
 				</section>
 				<section>
-					<section>
+					<section data-background="css/image/9.png">
 						<h2>中国改革开放初期的具体情况</h2>
 					</section>
 				</section>
