Update some transition

--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
 					<br>
 					<p style="font-size: 0.9em;">毛概第六组 主题展示</p>
 				</section>
-				<section>
-					<section>
+				<section data-transition="slide" data-background="#aa00ff" data-background-transition="zoom">
 					<h2>因何而起?</h2>
-					</section>
+				</section>
+				<section >
+
 					<section>
 						<h3>背景</h3>
 						<p class="left">2017年10月18日，习近平同志在十九大报告中指出，坚持人与自然和谐共生。必须树立和践行绿水青山就是金山银山的理念，坚持节约资源和保护环境的基本国策，像对待生命一样对待生态环境，统筹山水林田湖草系统治理，实行最严格的生态环境保护制度，形成绿色发展方式和生活方式，坚定走生产发展、生活富裕、生态良好的文明发展道路，建设美丽中国，为人民创造良好生产生活环境，为全球生态安全作出贡献。
@@ -44,7 +45,7 @@
 						</p>
 					</section>
 					<section>
-						<h2>改革开放前期的粗放型经济发展方式</h2>
+						<h2>改革开放初期的粗放型经济发展方式</h2>
 					</section>
 				</section>
 				<section>
@@ -58,7 +59,7 @@
 								结合左右江革命老区的发展案例，<br>简要介绍“两山理论”内容与绿色发展概念。
 							</li>
 							<li>
-								结合不丹、中国太湖、雾都伦敦的经济发展轨迹浅，<br>谈生态环境保护与粗放型经济发展方式的辩证关系。
+								结合不丹、中国太湖、雾都伦敦的经济发展轨迹浅谈，<br>生态环境保护与粗放型经济发展方式的辩证关系。
 							</li>
 						</ul>
 					</section>
@@ -148,7 +149,7 @@
 				</section>
 
 
-				<section>
+				<section data-transition="slide" data-background="#ff1744" data-background-transition="zoom">
 					<h2>让我们接着看几个例子</h2>
 				</section>
 				<section>
@@ -205,6 +206,7 @@
 			// - https://github.com/hakimel/reveal.js#configuration
 			// - https://github.com/hakimel/reveal.js#dependencies
 			Reveal.initialize({
+				transition: 'convex', // none/fade/slide/convex/concave/zoom
 				dependencies: [
 					{ src: 'plugin/markdown/marked.js' },
 					{ src: 'plugin/markdown/markdown.js' },
