--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<br>
 					<p style="font-size: 0.9em;">毛概第六组 主题展示</p>
 				</section>
-				<section data-transition="slide" data-background="#aa00ff" data-background-transition="zoom">
+				<section data-transition="slide" data-background="#7c4dff" data-background-transition="zoom">
 					<h2>因何而起?</h2>
 				</section>
 				<section >
@@ -194,7 +194,13 @@
 						<h2>中国当今的现状</h2>
 					</section>
 				</section>
-
+				<section style="text-align: left;color: white;" data-background="#222222">
+					<h2 style="color: white;">THE END</h2>
+					<p>
+						- Created By Laphets
+						<br> - Based On Reveal.js Framework
+					</p>
+				</section>
 			</div>
 		</div>
 
