--- a/index.html
+++ b/index.html
@@ -148,6 +148,10 @@
 					</section>
 				</section>
 
+				<section>
+					<h2>粗放->反思补救->平衡</h2>
+				</section>
+
 
 				<section data-transition="slide" data-background="#ff1744" data-background-transition="zoom">
 					<h2>让我们接着看几个例子</h2>
