--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 						<p class="left">
 							两山理论，用一句话概扩就是“绿水青山就是金山银山”。它的核心理念，可以概括为这两句话：
 						</p>
-						<p class="fragment fade-up">
+						<p class="left fragment fade-up">
 							保护生态环境就是保护生产力、改善生态环境就是发展生产力。
 						</p>
 					</section>
@@ -158,10 +158,10 @@
 				</section>
 				<section>
 					<section data-background="css/image/6.png">
-						<h1>Bhutan</h1>
+						<h1>Africa</h1>
 					</section>
 					<section>
-						<h2>不丹</h2>
+						<h2>非洲</h2>
 						<h3>最幸福的地方，缘何最不发达</h3>
 					</section>
 				</section>
@@ -172,6 +172,12 @@
 					<section>
 						<h2>太湖</h2>
 						<h3>走在前列，勇立潮头</h3>
+					</section>
+					<section>
+<p class="left">2007年，苏锡常三市工业占GDP的比重达<span class="fragment highlight-red">58.8%</span>，其中重工业占<span class="fragment highlight-red">38.9%</span>，服务业仅为<span class="fragment highlight-red">35.2%</span>。太湖流域纺织、化工和酿造等六个行业共有企业2.46万家，COD、氨氮排放量分别占全流域工业排放量的<span class="fragment highlight-red">65%、63.4%</span>。这样相对粗放的发展模式，却使人均gdp超过7000美元，是当时全国的3.5倍。</p>
+					</section>
+					<section>
+<p class="left">从2007到2017的十年来，太湖治理不仅没有影响经济发展，而且有力促进流域经济社会发展，较2007年，苏锡常地区<span class="fragment highlight-red">人口增长7.49%、GDP增长166.3%</span>，三次产业比重实现了“三二一”历史性转变，服务业增加值占GDP比重达52.6%</p>
 					</section>
 				</section>
 				<section>
