--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 								结合左右江革命老区的发展案例，<br>简要介绍“两山理论”内容与绿色发展概念。
 							</li>
 							<li>
-								结合不丹、中国太湖、雾都伦敦的经济发展轨迹浅谈，<br>生态环境保护与粗放型经济发展方式的辩证关系。
+								结合不丹、中国太湖、雾都伦敦的经济发展轨迹，<br>浅谈生态环境保护与粗放型经济发展方式的辩证关系。
 							</li>
 						</ul>
 					</section>
