--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
 					<section>
 						<h2>利用绿水青山好禀赋</h2>
 					</section>
-					<section>
-						<!-- <h3>做好特色新文章</h3> -->
+					<!-- <section>
 						<ol>
 							<li>
 								打造蓝色临港低碳极。
@@ -100,14 +99,13 @@
 								打造红色传承极。
 							</li>
 						</ol>
-					</section>
+					</section> -->
 				</section>
 				<section>
 					<section>
 						<h2>盘活产业谋发展</h2>
 					</section>
-					<section>
-						<!-- <h3>做好特色新文章</h3> -->
+					<!-- <section>
 						<ul>
 							<li>
 								培育有机农业。以农业清洁生产、有机物综合利用为核心，构建有机生态农业体系。
@@ -127,11 +125,8 @@
 							<li>
 								打造美丽乡村。
 							</li>
-							<!-- <li>
-								广大人民群众热切期盼加快提高生态环境质量。
-							</li> -->
 						</ul>
-					</section>
+					</section> -->
 				</section>
 
 				<section>
