--- a/index.html
+++ b/index.html
@@ -41,11 +41,14 @@
 					<section>
 						<h3>提出时间</h3>
 						<p class="left">
-							2005年8月15日，时任浙江省委书记的习近平同志在浙江湖州安吉考察时，首次提出了“绿水青山就是金山银山”的科学论断，后来，他又进一步阐述了绿水青山与金山银山之间三个发展阶段的问题。（改革开放前期）</p>
+							2005年8月15日，时任浙江省委书记的习近平同志在浙江湖州安吉考察时，首次提出了“绿水青山就是金山银山”的科学论断，后来，他又进一步阐述了绿水青山与金山银山之间三个发展阶段的问题。</p>
 						</p>
 					</section>
 					<section>
 						<h2>改革开放初期的粗放型经济发展方式</h2>
+					</section>
+					<section>
+						<h2>粗放型经济发展方式是绿色发展方式的必要过渡</h2>
 					</section>
 				</section>
 				<section>
@@ -59,7 +62,7 @@
 								结合左右江革命老区的发展案例，<br>简要介绍“两山理论”内容与绿色发展概念。
 							</li>
 							<li>
-								结合不丹、中国太湖、雾都伦敦的经济发展轨迹，<br>浅谈生态环境保护与粗放型经济发展方式的辩证关系。
+								结合非洲、中国太湖、雾都伦敦的经济发展轨迹，<br>浅谈生态环境保护与粗放型经济发展方式的辩证关系。
 							</li>
 						</ul>
 					</section>
@@ -82,7 +85,9 @@
 
 				<section>
 					<section>
-						<h2>利用绿水青山好禀赋</h2>
+						<h3>对外：利用绿水青山好禀赋</h3>
+						<h3>对内：盘活产业谋发展</h3>
+
 					</section>
 					<!-- <section>
 						<ol>
@@ -102,31 +107,7 @@
 					</section> -->
 				</section>
 				<section>
-					<section>
-						<h2>盘活产业谋发展</h2>
-					</section>
-					<!-- <section>
-						<ul>
-							<li>
-								培育有机农业。以农业清洁生产、有机物综合利用为核心，构建有机生态农业体系。
-							</li>
-							<li>
-								培育环保工业。
-							</li>
-							<li>
-								壮大碳汇产业。
-							</li>
-							<li>
-								培育产业强镇。
-							</li>
-							<li>
-								倡导低碳消费。
-							</li>
-							<li>
-								打造美丽乡村。
-							</li>
-						</ul>
-					</section> -->
+					<img src="css/image/10.png" alt="">
 				</section>
 
 				<section>
@@ -169,7 +150,7 @@
 						<h3>走在前列，勇立潮头</h3>
 					</section>
 					<section>
-<p class="left">2007年，苏锡常三市工业占GDP的比重达<span class="fragment highlight-red">58.8%</span>，其中重工业占<span class="fragment highlight-red">38.9%</span>，服务业仅为<span class="fragment highlight-red">35.2%</span>。太湖流域纺织、化工和酿造等六个行业共有企业2.46万家，COD、氨氮排放量分别占全流域工业排放量的<span class="fragment highlight-red">65%、63.4%</span>。这样相对粗放的发展模式，却使人均gdp超过7000美元，是当时全国的3.5倍。</p>
+<p class="left">2007年，苏锡常三市工业占GDP的比重达<span class="fragment highlight-red">58.8%</span>，其中重工业占<span class="fragment highlight-red">38.9%</span>，服务业仅为<span class="fragment highlight-red">35.2%</span>。太湖流域纺织、化工和酿造等六个行业共有企业2.46万家，COD、氨氮排放量分别占全流域工业排放量的<span class="fragment highlight-red">65%、63.4%</span>。这样相对粗放的发展模式，却使人均GDP超过7000美元，是当时全国的3.5倍。</p>
 					</section>
 					<section>
 <p class="left">从2007到2017的十年来，太湖治理不仅没有影响经济发展，而且有力促进流域经济社会发展，较2007年，苏锡常地区<span class="fragment highlight-red">人口增长7.49%、GDP增长166.3%</span>，三次产业比重实现了“三二一”历史性转变，服务业增加值占GDP比重达52.6%</p>
@@ -187,6 +168,9 @@
 							<li>不可逆伤害</li>
 							<li>没有及时转变</li>
 						</ul> -->
+					</section>
+					<section>
+						<p class="left">1952年，大量工厂生产和居民燃煤取暖排出的废气难以扩散，积聚在城市上空。伦敦被有浓厚的烟雾笼罩。许多市民出现胸闷、窒息等不适感，发病率和死亡率急剧增加。据统计，一月之内因这场大烟雾而死的人多达 4,000 人。</p>
 					</section>
 				</section>
 				<section>
