--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 					<h2>让我们接着看几个例子</h2>
 				</section>
 				<section>
-					<section data-background="css/image/6.png">
+					<section data-background="css/image/6.jpg">
 						<h1>Africa</h1>
 					</section>
 					<section>
@@ -142,7 +142,7 @@
 					</section>
 				</section>
 				<section>
-					<section data-background="css/image/7.png">
+					<section data-background="css/image/7.jpg">
 						<h1>太湖</h1>
 					</section>
 					<section>
@@ -174,7 +174,7 @@
 					</section>
 				</section>
 				<section>
-					<section data-background="css/image/9.png">
+					<section data-background="css/image/9.jpg">
 						<h2>中国改革开放初期的具体情况</h2>
 					</section>
 				</section>
